# models/user.model.go
@@ -5,10 +5,13 @@ import (
 )
 
 type User struct {
-	ID       int    `json:"id" db:"id"`
-	Username string `json:"username" db:"username"`
-	Email    string `json:"email" db:"email"`
-	Password string `json:"password" db:"password"`
+	ID         int     `json:"id" db:"id"`
+	Username   string  `json:"username" db:"username"`
+	Email      string  `json:"email" db:"email"`
+	Password   string  `json:"password,omitempty" db:"password"`
+	Provider   string  `json:"provider,omitempty" db:"provider"`       // e.g., "google", "local"
+	ProviderID *string `json:"provider_id,omitempty" db:"provider_id"` // ID from the provider (e.g., Google ID)
+	Picture    string  `json:"picture,omitempty" db:"picture"`         // URL to the user's profile picture
 	// Roles    string `json:"role" db:"role"` // e.g., "user", "driver", "admin"
 	// AvatarUrl  sql.NullString `json:"avatar_url" db:"avatar_url"`
 	// AvatarName sql.NullString `json:"avatar_name" db:"avatar_name"`
